syntax_maker/Syntax/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Syntax/Par.y
-----------------------------------------------------------------------------

state 87 contains 1 reduce/reduce conflicts.
state 90 contains 3 shift/reduce conflicts.
state 91 contains 2 shift/reduce conflicts.
state 92 contains 6 shift/reduce conflicts.
state 93 contains 1 shift/reduce conflicts.
state 94 contains 1 shift/reduce conflicts.
state 95 contains 20 reduce/reduce conflicts.
state 144 contains 2 reduce/reduce conflicts.
state 145 contains 2 reduce/reduce conflicts.
state 146 contains 1 shift/reduce conflicts.
state 147 contains 1 shift/reduce conflicts.
state 148 contains 2 reduce/reduce conflicts.

rule 39 is unused
rule 40 is unused
rule 41 is unused
rule 56 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Block -> 'do' ListStmt 'end'                       (5)
	HBlock -> PBlock                                   (6)
	HBlock -> Stmt                                     (7)
	Stmt -> Block                                      (8)
	Stmt -> BasicType 'mut' Ident '=' Expr             (9)
	Stmt -> BasicType Ident '=' Expr                   (10)
	Stmt -> Ident '=' Expr                             (11)
	Stmt -> Ident '[' Expr ']' '=' Expr                (12)
	Stmt -> 'return' Expr                              (13)
	Stmt -> 'if' '(' Expr ')' HBlock                   (14)
	Stmt -> 'if' '(' Expr ')' HBlock 'else' HBlock     (15)
	Stmt -> 'while' '(' Expr ')' HBlock                (16)
	Stmt -> 'print' '(' Expr ')'                       (17)
	Stmt -> 'for' Expr Proc                            (18)
	Stmt -> Expr                                       (19)
	Stmt -> Stmt ';'                                   (20)
	Stmt -> 'def' BasicType Ident '(' ListArg ')' PBlock   (21)
	Stmt -> 'def' BasicType Ident '(' ListArg ')' Lambda   (22)
	ListStmt ->                                        (23)
	ListStmt -> Stmt ';' ListStmt                      (24)
	Type -> '&' BasicType                              (25)
	Type -> '&mut' BasicType                           (26)
	Type -> 'mut' BasicType                            (27)
	Type -> BasicType                                  (28)
	ListType ->                                        (29)
	ListType -> Type                                   (30)
	ListType -> Type ',' ListType                      (31)
	BasicType -> BasicType '[]'                        (32)
	BasicType -> 'int'                                 (33)
	BasicType -> 'string'                              (34)
	BasicType -> 'bool'                                (35)
	BasicType -> 'void'                                (36)
	BasicType -> BasicType 'lambda' '(' ListType ')'   (37)
	BasicType -> BasicType 'proc' '[' ListArg ']' '(' ListType ')'   (38)
	ListBasicType ->                                   (39)
	ListBasicType -> BasicType                         (40)
	ListBasicType -> BasicType ',' ListBasicType       (41)
	Proc -> 'proc' '[' ListArg ']' '(' ListArg ')' Block   (42)
	Lambda -> BasicType 'lambda' '(' ListArg ')' Block   (43)
	PBlock -> Proc                                     (44)
	PBlock -> Block                                    (45)
	PBlock -> Ident                                    (46)
	Arg -> Type Ident                                  (47)
	ListArg ->                                         (48)
	ListArg -> Arg                                     (49)
	ListArg -> Arg ',' ListArg                         (50)
	Expr6 -> Ident                                     (51)
	Expr6 -> Integer                                   (52)
	Expr6 -> 'true'                                    (53)
	Expr6 -> 'false'                                   (54)
	Expr6 -> String                                    (55)
	Expr6 -> '(' Expr ')'                              (56)
	Expr6 -> Proc                                      (57)
	Expr6 -> Lambda                                    (58)
	Expr6 -> Expr6 '(' ListExpr ')'                    (59)
	Expr6 -> 'to_str' '(' Expr ')'                     (60)
	Expr6 -> '[' ListExpr ']'                          (61)
	Expr6 -> Ident '[' Expr ']'                        (62)
	Expr6 -> '(' Expr ')'                              (63)
	Expr5 -> '-' Expr6                                 (64)
	Expr5 -> '!' Expr5                                 (65)
	Expr5 -> Expr6                                     (66)
	Expr4 -> Expr4 MulOp Expr4                         (67)
	Expr4 -> Expr5                                     (68)
	Expr3 -> Expr3 AddOp Expr3                         (69)
	Expr3 -> Expr4                                     (70)
	Expr2 -> Expr2 CompOp Expr2                        (71)
	Expr2 -> Expr3                                     (72)
	Expr1 -> Expr1 '&&' Expr1                          (73)
	Expr1 -> Expr2                                     (74)
	Expr -> Expr '||' Expr                             (75)
	Expr -> Expr1                                      (76)
	ListExpr ->                                        (77)
	ListExpr -> Expr                                   (78)
	ListExpr -> Expr ',' ListExpr                      (79)
	AddOp -> '+'                                       (80)
	AddOp -> '-'                                       (81)
	MulOp -> '*'                                       (82)
	MulOp -> '/'                                       (83)
	MulOp -> '%'                                       (84)
	CompOp -> '<'                                      (85)
	CompOp -> '>'                                      (86)
	CompOp -> '<='                                     (87)
	CompOp -> '>='                                     (88)
	CompOp -> '=='                                     (89)
	CompOp -> '!='                                     (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'&mut'         { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'+'            { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'['            { PT _ (TS _ 21) }
	'[]'           { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'def'          { PT _ (TS _ 25) }
	'do'           { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'end'          { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'for'          { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'lambda'       { PT _ (TS _ 33) }
	'mut'          { PT _ (TS _ 34) }
	'print'        { PT _ (TS _ 35) }
	'proc'         { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'string'       { PT _ (TS _ 38) }
	'to_str'       { PT _ (TS _ 39) }
	'true'         { PT _ (TS _ 40) }
	'void'         { PT _ (TS _ 41) }
	'while'        { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Block           rule  5
	HBlock          rules 6, 7
	Stmt            rules 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	ListStmt        rules 23, 24
	Type            rules 25, 26, 27, 28
	ListType        rules 29, 30, 31
	BasicType       rules 32, 33, 34, 35, 36, 37, 38
	ListBasicType   rules 39, 40, 41
	Proc            rule  42
	Lambda          rule  43
	PBlock          rules 44, 45, 46
	Arg             rule  47
	ListArg         rules 48, 49, 50
	Expr6           rules 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	Expr5           rules 64, 65, 66
	Expr4           rules 67, 68
	Expr3           rules 69, 70
	Expr2           rules 71, 72
	Expr1           rules 73, 74
	Expr            rules 75, 76
	ListExpr        rules 77, 78, 79
	AddOp           rules 80, 81
	MulOp           rules 82, 83, 84
	CompOp          rules 85, 86, 87, 88, 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'['            shift, and enter state 23
	'bool'         shift, and enter state 24
	'def'          shift, and enter state 25
	'do'           shift, and enter state 26
	'false'        shift, and enter state 27
	'for'          shift, and enter state 28
	'if'           shift, and enter state 29
	'int'          shift, and enter state 30
	'print'        shift, and enter state 31
	'proc'         shift, and enter state 32
	'return'       shift, and enter state 33
	'string'       shift, and enter state 34
	'to_str'       shift, and enter state 35
	'true'         shift, and enter state 36
	'void'         shift, and enter state 37
	'while'        shift, and enter state 38
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40
	%eof           reduce using rule 23

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	Block          goto state 7
	Stmt           goto state 8
	ListStmt       goto state 9
	BasicType      goto state 10
	Proc           goto state 11
	Lambda         goto state 12
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 19

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'proc'         reduce using rule 1
	'||'           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr                            (rule 11)
	Stmt -> Ident . '[' Expr ']' '=' Expr               (rule 12)
	Expr6 -> Ident .                                    (rule 51)
	Expr6 -> Ident . '[' Expr ']'                       (rule 62)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	'('            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'='            shift, and enter state 80
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'['            shift, and enter state 81
	'||'           reduce using rule 51


State 4

	Expr6 -> Integer .                                  (rule 52)

	'!='           reduce using rule 52
	'%'            reduce using rule 52
	'&&'           reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'else'         reduce using rule 52
	'proc'         reduce using rule 52
	'||'           reduce using rule 52


State 5

	Expr6 -> String .                                   (rule 55)

	'!='           reduce using rule 55
	'%'            reduce using rule 55
	'&&'           reduce using rule 55
	'('            reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'else'         reduce using rule 55
	'proc'         reduce using rule 55
	'||'           reduce using rule 55


State 6

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 7

	Stmt -> Block .                                     (rule 8)

	';'            reduce using rule 8


State 8

	Stmt -> Stmt . ';'                                  (rule 20)
	ListStmt -> Stmt . ';' ListStmt                     (rule 24)

	';'            shift, and enter state 79


State 9

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 10

	Stmt -> BasicType . 'mut' Ident '=' Expr            (rule 9)
	Stmt -> BasicType . Ident '=' Expr                  (rule 10)
	BasicType -> BasicType . '[]'                       (rule 32)
	BasicType -> BasicType . 'lambda' '(' ListType ')'    (rule 37)
	BasicType -> BasicType . 'proc' '[' ListArg ']' '(' ListType ')'    (rule 38)
	Lambda -> BasicType . 'lambda' '(' ListArg ')' Block    (rule 43)

	'[]'           shift, and enter state 75
	'lambda'       shift, and enter state 76
	'mut'          shift, and enter state 77
	'proc'         shift, and enter state 78
	L_Ident        shift, and enter state 2

	Ident          goto state 74

State 11

	Expr6 -> Proc .                                     (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	'('            reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	']'            reduce using rule 57
	'else'         reduce using rule 57
	'proc'         reduce using rule 57
	'||'           reduce using rule 57


State 12

	Expr6 -> Lambda .                                   (rule 58)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'/'            reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	']'            reduce using rule 58
	'else'         reduce using rule 58
	'proc'         reduce using rule 58
	'||'           reduce using rule 58


State 13

	Expr6 -> Expr6 . '(' ListExpr ')'                   (rule 59)
	Expr5 -> Expr6 .                                    (rule 66)

	'!='           reduce using rule 66
	'%'            reduce using rule 66
	'&&'           reduce using rule 66
	'('            shift, and enter state 73
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'/'            reduce using rule 66
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	']'            reduce using rule 66
	'else'         reduce using rule 66
	'proc'         reduce using rule 66
	'||'           reduce using rule 66


State 14

	Expr4 -> Expr5 .                                    (rule 68)

	'!='           reduce using rule 68
	'%'            reduce using rule 68
	'&&'           reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68
	'+'            reduce using rule 68
	','            reduce using rule 68
	'-'            reduce using rule 68
	'/'            reduce using rule 68
	';'            reduce using rule 68
	'<'            reduce using rule 68
	'<='           reduce using rule 68
	'=='           reduce using rule 68
	'>'            reduce using rule 68
	'>='           reduce using rule 68
	']'            reduce using rule 68
	'else'         reduce using rule 68
	'proc'         reduce using rule 68
	'||'           reduce using rule 68


State 15

	Expr4 -> Expr4 . MulOp Expr4                        (rule 67)
	Expr3 -> Expr4 .                                    (rule 70)

	'!='           reduce using rule 70
	'%'            shift, and enter state 70
	'&&'           reduce using rule 70
	')'            reduce using rule 70
	'*'            shift, and enter state 71
	'+'            reduce using rule 70
	','            reduce using rule 70
	'-'            reduce using rule 70
	'/'            shift, and enter state 72
	';'            reduce using rule 70
	'<'            reduce using rule 70
	'<='           reduce using rule 70
	'=='           reduce using rule 70
	'>'            reduce using rule 70
	'>='           reduce using rule 70
	']'            reduce using rule 70
	'else'         reduce using rule 70
	'proc'         reduce using rule 70
	'||'           reduce using rule 70

	MulOp          goto state 69

State 16

	Expr3 -> Expr3 . AddOp Expr3                        (rule 69)
	Expr2 -> Expr3 .                                    (rule 72)

	'!='           reduce using rule 72
	'&&'           reduce using rule 72
	')'            reduce using rule 72
	'+'            shift, and enter state 67
	','            reduce using rule 72
	'-'            shift, and enter state 68
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	']'            reduce using rule 72
	'else'         reduce using rule 72
	'proc'         reduce using rule 72
	'||'           reduce using rule 72

	AddOp          goto state 66

State 17

	Expr2 -> Expr2 . CompOp Expr2                       (rule 71)
	Expr1 -> Expr2 .                                    (rule 74)

	'!='           shift, and enter state 60
	'&&'           reduce using rule 74
	')'            reduce using rule 74
	','            reduce using rule 74
	';'            reduce using rule 74
	'<'            shift, and enter state 61
	'<='           shift, and enter state 62
	'=='           shift, and enter state 63
	'>'            shift, and enter state 64
	'>='           shift, and enter state 65
	']'            reduce using rule 74
	'else'         reduce using rule 74
	'proc'         reduce using rule 74
	'||'           reduce using rule 74

	CompOp         goto state 59

State 18

	Expr1 -> Expr1 . '&&' Expr1                         (rule 73)
	Expr -> Expr1 .                                     (rule 76)

	'&&'           shift, and enter state 58
	')'            reduce using rule 76
	','            reduce using rule 76
	';'            reduce using rule 76
	']'            reduce using rule 76
	'else'         reduce using rule 76
	'proc'         reduce using rule 76
	'||'           reduce using rule 76


State 19

	Stmt -> Expr .                                      (rule 19)
	Expr -> Expr . '||' Expr                            (rule 75)

	';'            reduce using rule 19
	'else'         reduce using rule 19
	'||'           shift, and enter state 57


State 20

	Expr5 -> '!' . Expr5                                (rule 65)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'['            shift, and enter state 23
	'bool'         shift, and enter state 24
	'false'        shift, and enter state 27
	'int'          shift, and enter state 30
	'proc'         shift, and enter state 32
	'string'       shift, and enter state 34
	'to_str'       shift, and enter state 35
	'true'         shift, and enter state 36
	'void'         shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	BasicType      goto state 44
	Proc           goto state 11
	Lambda         goto state 12
	Expr6          goto state 13
	Expr5          goto state 56

State 21

	Expr6 -> '(' . Expr ')'                             (rule 56)
	Expr6 -> '(' . Expr ')'                             (rule 63)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'['            shift, and enter state 23
	'bool'         shift, and enter state 24
	'false'        shift, and enter state 27
	'int'          shift, and enter state 30
	'proc'         shift, and enter state 32
	'string'       shift, and enter state 34
	'to_str'       shift, and enter state 35
	'true'         shift, and enter state 36
	'void'         shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	BasicType      goto state 44
	Proc           goto state 11
	Lambda         goto state 12
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 55

State 22

	Expr5 -> '-' . Expr6                                (rule 64)

	'('            shift, and enter state 21
	'['            shift, and enter state 23
	'bool'         shift, and enter state 24
	'false'        shift, and enter state 27
	'int'          shift, and enter state 30
	'proc'         shift, and enter state 32
	'string'       shift, and enter state 34
	'to_str'       shift, and enter state 35
	'true'         shift, and enter state 36
	'void'         shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	BasicType      goto state 44
	Proc           goto state 11
	Lambda         goto state 12
	Expr6          goto state 54

State 23

	Expr6 -> '[' . ListExpr ']'                         (rule 61)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'['            shift, and enter state 23
	']'            reduce using rule 77
	'bool'         shift, and enter state 24
	'false'        shift, and enter state 27
	'int'          shift, and enter state 30
	'proc'         shift, and enter state 32
	'string'       shift, and enter state 34
	'to_str'       shift, and enter state 35
	'true'         shift, and enter state 36
	'void'         shift, and enter state 37
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 39
	L_quoted       shift, and enter state 40

	Ident          goto state 43
	Integer        goto state 4
	String         goto state 5
	BasicType      goto state 44
	Proc           goto state 11
	Lambda         goto state 12
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 52
	ListExpr       goto state 53

State 24

	BasicType -> 'bool' .                               (rule 35)

	')'            reduce using rule 35
	','            reduce using rule 35
	'[]'           reduce using rule 35
	'lambda'       reduce using rule 35
	'mut'          reduce using rule 35
	'proc'         reduce using rule 35
	L_Ident        reduce using rule 35


State 25

	Stmt -> 'def' . BasicType Ident '(' ListArg ')' PBlock    (rule 21)
	Stmt -> 'def' . BasicType Ident '(' ListArg ')' Lambda    (rule 22)

	'bool'         shift, and enter state 24
	'int'          shift, and enter state 30
	'string'       shift, and enter state 34
	'void'         shift, and enter state 37

	BasicType      goto state 51

State 26

	Block -> 'do' . ListStmt 'end'                      (rule 5)
